# rust-learning-project

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  index.html  main.js  package.json  rust-toolchain.toml  setup_dev.sh  tarpaulin-report.html  trunk.toml
.github/workflows/: ci.yml
TODO/: phase_1.md  phase_1_breakdown.md  phase_2.md  phase_2_breakdown.md  phase_3.md  phase_3_breakdown.md  phase_4.md  phase_4_breakdown.md  phase_5.md  phase_5_breakdown.md  phase_6.md  phase_6_breakdown.md  phase_conclusion.md  works_cited.md
crates/face-detection/: Cargo.toml
crates/face-detection/src/: lib.rs
crates/image-processing/: Cargo.toml
crates/image-processing/src/: lib.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: lib.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs
crates/wasm-app/: Cargo.toml
crates/wasm-app/src/: lib.rs
crates/wasm/app/: Cargo.toml
crates/wasm/app/src/: lib.rs
crates/wasm/face-detection/: Cargo.toml
crates/wasm/face-detection/src/: lib.rs
crates/wasm/image-processing/: Cargo.toml
crates/wasm/image-processing/src/: lib.rs
docs/: api.md  face_detection.md  frontend.md  getting_started.md  image_processing.md  mesh.md  optimizations.md  performance.md  physics.md  setup.md  testing.md  wasm.md
face-stretcher-wasm/: Cargo.toml
js/: main.js  rust_learning_project.js
js/app/: face-model.js  main.js  three-setup.js  ui-events.js  wasm-loader.js
js/app/tests/: wasm-loader.test.js
src/: face_detection.rs  image_processing.rs  lib.rs  mesh.rs  physics.rs
static/: index.html
static/assets/: face.gltf
tests/: add_test.rs  face_detection.rs  image_processing.rs  physics.rs  wasm.rs
