[package]
name = "rust-learning-project"
version = "0.1.0"
edition = "2021"
description = "Mario 64–style face stretcher rebuilt in Rust + WebAssembly for the web (mesh, physics, and image pipeline in Rust)."
repository = "https://github.com/fderuiter/rust-learning-project"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
nalgebra = "0.32.3"
js-sys = "0.3.69"
image = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
tensorflow = "0.15.0"
photon-rs = "0.3.1"
serde-wasm-bindgen = "0.4"

[dev-dependencies]
image = "0.24"
photon-rs = "0.3"
wasm-bindgen-test = "0.3"

[[test]]
name = "physics"
path = "tests/physics.rs"

[lib]
crate-type = ["cdylib", "rlib"]
