[workspace]
members = [
    "crates/wasm-app",
    "crates/physics",
    "crates/mesh",
    "crates/image-processing",
    "crates/face-detection",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fderuiter/rust-learning-project"

[workspace.dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
nalgebra = "0.32.3"
js-sys = "0.3.69"
image = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
photon-rs = "0.3.1"
serde-wasm-bindgen = "0.6"
tensorflow = "0.15.0"

[profile.release]
lto = true
opt-level = "z"
