[package]
name = "wasm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Local crates
mesh = { path = "../mesh" }
physics = { path = "../physics" }
image-processing = { path = "../image-processing" }
face-detection = { path = "../face-detection", optional = true }

[features]
default = []
detect-faces = ["face-detection"]
